# InferGate

./: .coverage  .coveragerc  .dockerignore  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.gateway  Dockerfile.worker  LICENSE  README.md  docker-compose.cpu.yml  docker-compose.distributed.yml  docker-compose.yml  pyproject.toml
app/: auth.py  config.py  dependencies.py  logging_middleware.py  main.py  monitoring.py  rate_limit.py  worker.py
app/config/: __init__.py  enums.py  loader.py  models.py  server.py
app/middleware/: __init__.py  auth.py  rate_limit.py
app/monitoring/: __init__.py  metrics.py  middleware.py
app/providers/: __init__.py  base.py  registry.py  remote.py
app/providers/image/: diffusers_provider.py
app/providers/text/: vllm_provider.py
app/providers/tts/: fish_speech.py  kokoro.py
app/routers/: audio.py  cache.py  chat.py  health.py  images.py  models.py
app/schemas/: __init__.py  audio.py  cache.py  chat.py  images.py  models.py
app/services/: __init__.py  cache_manager.py  gpu_scheduler.py  provider_manager.py
app/utils/: audio_utils.py  image_utils.py
config/: server.yaml
config/examples/: kokoro-japanese.yaml.example  sdxl.yaml.example
config/models/: flux1-dev.yaml  flux1-schnell.yaml  flux2-klein-4b.yaml  kokoro-82m.yaml  llama3.1-8b.yaml  openaudio-s1-mini.yaml  qwen3-8b.yaml  qwen3.5-4b.yaml  qwen3.5-9b.yaml  sd35-medium.yaml
deploy/: Dockerfile.cpu  docker-compose.cpu.yml  docker-compose.distributed.yml  docker-compose.yml
deploy/monitoring/: docker-compose.monitoring.yml
deploy/workers/flux1-dev/: Dockerfile  requirements.txt
deploy/workers/flux1-schnell/: Dockerfile
deploy/workers/flux2-klein-4b/: Dockerfile
deploy/workers/kokoro-82m/: Dockerfile  requirements.txt
deploy/workers/llama3.1-8b/: Dockerfile  requirements.txt
deploy/workers/openaudio-s1-mini/: Dockerfile  requirements.txt
deploy/workers/qwen3-8b/: Dockerfile
deploy/workers/qwen3.5-4b/: Dockerfile
deploy/workers/qwen3.5-9b/: Dockerfile
deploy/workers/sd35-medium/: Dockerfile
monitoring/: docker-compose.monitoring.yml  prometheus.yml
requirements/: base.txt  ml.txt  tts.txt
scripts/: benchmark.py  download_models.py
tests/: conftest.py  test_audio.py  test_cache.py  test_cache_manager.py  test_chat.py  test_chat_extended.py  test_concurrency.py  test_config.py  test_health_metrics.py  test_images.py  test_middleware.py  test_monitoring.py  test_provider_manager.py  test_remote_provider.py  test_worker.py
