[project]
name = "infergate"
version = "0.1.0"
description = "Self-hosted OpenAI-compatible AI gateway for local models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pyyaml>=6.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.2.0",
    "diffusers>=0.37.0",
    "transformers>=4.40.0",
    "accelerate>=0.30.0",
    "safetensors>=0.4.0",
    "sentencepiece>=0.2.0",
    "vllm>=0.11.0",
]
tts = [
    "kokoro>=0.9.0",
    "soundfile>=0.12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.5.0",
]
all = ["infergate[gpu,tts,dev]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
