[project]
name = "infergate"
version = "0.1.0"
description = "Self-hosted OpenAI-compatible AI gateway for local models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11,<3.15"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "pyyaml>=6.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "aiosqlite>=0.20.0",
    "aiofiles>=24.0",
    "httpx>=0.28.0",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.6.0",
    "diffusers>=0.37.0",
    "transformers>=4.48.0",
    "accelerate>=1.2.0",
    "safetensors>=0.5.0",
    "sentencepiece>=0.2.0",
    "vllm>=0.8.0",
]
tts = [
    "kokoro>=0.7.0",
    "soundfile>=0.12.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
]
all = ["infergate[gpu,tts,dev]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade (modernize syntax)
    "B",     # flake8-bugbear (common bugs)
    "SIM",   # flake8-simplify
    "ASYNC", # flake8-async (async pitfalls)
    "C4",    # flake8-comprehensions
    "T20",   # flake8-print (no print in production)
    "RUF",   # ruff-specific rules
]
ignore = ["E501"]  # line length handled by formatter

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
